fix spacing issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@
  }
 
  div.dws-website {
-  margin-top: 70px;
+  margin-top: 110px;
  }
 
 div.mobile-frame {
